# Nepali-Ho-Ni_NASA-spaceapp

./: README.md  nasa.py  pyproject.toml
gan/: microgan.ipynb
jov.ai frontend/css/: coloration.css  generate.css  style.css
jov.ai frontend/html/: coloration.html  image_generation.html  index.html
jov.ai frontend/js/: colorization.js  image-generator.js
nepalihoni_models/: dummy.caffemodel
